# AnNum

./: .gitignore  CMakeLists.txt  main.cpp
include/container/: Array-old.hpp  Array.hpp  Matrix.hpp  number_trait.h
include/data/: AbstractArray.h  Series.h  SeriesOperator.h
include/data/old/: Matrix.h  MatrixOperator.hpp  Series.h  SeriesOperator.h
include/model/: LinearRegression.h  Model.h
include/numeric_env/: NumericComponent.h  NumericConfig.h  NumericContext.h
include/operators/: RandomGenerator.h
src/: CMakeLists.txt
src/data/: AbstractArray.cpp  Series.cpp
src/data/old/: Matrix.cpp  Series.cpp  SeriesOperator.cpp
src/model/: LinearRegression.cpp
src/numeric_env/: NumericComponent.cpp  NumericConfig.cpp  NumericContext.cpp
src/operators/: RandomGenerator.cpp
